# huawei-lte-api

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
huawei-dongle-api/: Cargo.toml  README.md
huawei-dongle-api/examples/: basic_usage.rs  connectivity_test.rs
huawei-dongle-api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  retry.rs  session.rs
huawei-dongle-api/src/api/: auth.rs  device.rs  dhcp.rs  mod.rs  monitoring.rs  network.rs  sms.rs
huawei-dongle-api/src/models/: auth.rs  common.rs  device.rs  dhcp.rs  enums.rs  mod.rs  monitoring.rs  network.rs  sms.rs
huawei-dongle-cli/: Cargo.toml  README.md
huawei-dongle-cli/src/: cli.rs  config.rs  main.rs  output.rs
huawei-dongle-cli/src/commands/: device.rs  dhcp.rs  mod.rs  monitoring.rs  network.rs  sms.rs
