[workspace]
members = [
    "huawei-dongle-api",
    "huawei-dongle-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
url = "2.5"
scraper = "0.18"
regex = "1.10"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
fastrand = "2.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
serde_json = "1.0"
tabled = "0.15"